--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^12.7.2",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
     "install": "^0.13.0",
     "npm": "^7.20.6",
     "react": "^17.0.2",
     "react-native": "^0.63.3",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-maps": "^0.28.0",
     "react-native-permissions": "^3.0.5",
